dix Uniswap example WIP

--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "deploy-weth": "npx hardhat run scripts/deploy/deployWETHToken.js",
-    "deploy-test-tokens": "npx hardhat run scripts/deploy/deployTestTokens.js",
-    "uniswap-deploy": "npx hardhat run scripts/deploy/deployUniswapV2.js",
-    "uniswap-addliq": "npx hardhat test tests/examples/UniswapV2.addLiquidity.js",
+    "deploy-weth": "npx hardhat run scripts/common/deployWETHToken.js",
+    "deploy-test-tokens": "npx hardhat run scripts/common/deployTestTokens.js",
+    "uniswap-deploy": "npx hardhat run scripts/UniswapV2/deploy.js",
+    "uniswap-addliq": "npx hardhat run scripts/UniswapV2/addLiquidity.js",
     "uniswap-swapExact": "npx hardhat test tests/examples/UniswapV2.swapExactTokensForTokens.js",
     "start-node": "npx hardhat node",
     "start-node-headless": "npx hardhat node &",
