--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "uniswap-deploy": "npx hardhat run scripts/UniswapV2/deploy.js",
     "uniswap-addliq": "npx hardhat run scripts/UniswapV2/addLiquidity.js",
     "uniswap-removeliq": "npx hardhat run scripts/UniswapV2/removeLiquidity.js",
-    "uniswap-swapExact": "npx hardhat test tests/examples/UniswapV2.swapExactTokensForTokens.js",
+    "uniswap-swap-exact": "npx hardhat run scripts/UniswapV2/swapExactTokensForTokens.js",
     "start-node": "npx hardhat node",
     "start-node-headless": "npx hardhat node &",
     "kill-node": "lsof -ti:8545 | xargs kill -9",
