--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "deploy-test-tokens": "npx hardhat run scripts/common/deployTestTokens.js",
     "uniswap-deploy": "npx hardhat run scripts/UniswapV2/deploy.js",
     "uniswap-addliq": "npx hardhat run scripts/UniswapV2/addLiquidity.js",
-    "uniswap-removeliq": "npx hardhat run scripts/UniswapV2/removeLiquidity.js",
-    "uniswap-swap-exact": "npx hardhat run scripts/UniswapV2/swapExactTokensForTokens.js",
-    "uniswap-swap-tok": "npx hardhat run scripts/UniswapV2/swapTokensForExactTokens.js",
+    "uniswap-remliq": "npx hardhat run scripts/UniswapV2/removeLiquidity.js",
+    "uniswap-swapexact": "npx hardhat run scripts/UniswapV2/swapExactTokensForTokens.js",
+    "uniswap-swaptok": "npx hardhat run scripts/UniswapV2/swapTokensForExactTokens.js",
     "start-node": "npx hardhat node",
     "start-node-headless": "npx hardhat node &",
     "kill-node": "lsof -ti:8545 | xargs kill -9",
