--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,12 @@ EVM_CCL_ADDRESS=
 EVM_STAKEVAULT_ADDRESS=
 EVM_CCLTOKENMANAGER_ADDRESS=
 EVM_TESTGROUP_ADDRESS=
+
+EVM_WETH_ADDRESS=
+EVM_TKA_ADDRESS=
+EVM_TKB_ADDRESS=
+EVM_TKC_ADDRESS=
+
+UNISWAPV2_PROXY_ADDRESS=
+UNISWAPV2_ROUTER02_ADDRESS=
+UNISWAPV2_FACTORY_ADDRESS=
