changed proxy added remliq, exchange, added functions for factory in curve utils, added factory address to env, renamed files. changed package.json

--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "uniswap-swapexact": "npx hardhat run scripts/UniswapV2/swapExactTokensForTokens.js",
     "uniswap-swaptok": "npx hardhat run scripts/UniswapV2/swapTokensForExactTokens.js",
     "curve-lite-deploy": "npx hardhat run scripts/CurveLite/deployProxy.js",
-    "curve-lite-addliq": "npx hardhat run scripts/CurveLite/addLiquidityTwocrypto.js",
+    "curve-lite-addliq": "npx hardhat run scripts/CurveLite/addLiquidityTwocryptoswap.js",
+    "curve-lite-remliq": "npx hardhat run scripts/CurveLite/removeLiquidityTwocryptoswap.js",
+    "curve-lite-exchange": "npx hardhat run scripts/CurveLite/exchangeTwocryptoswap.js",
     "start-node": "npx hardhat node",
     "start-node-headless": "npx hardhat node &",
     "kill-node": "lsof -ti:8545 | xargs kill -9",
