--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,4 @@ UNISWAPV2_ROUTER02_ADDRESS=
 UNISWAPV2_FACTORY_ADDRESS=
 
 CURVE_LITE_TWOCRYPTOSWAP_PROXY_ADDRESS=
+CURVE_LITE_TWOCRYPTOSWAP_FACTORY_ADDRESS=
