--- a/.env.polygon
+++ b/.env.polygon
@@ -20,3 +20,4 @@ UNISWAPV2_ROUTER02_ADDRESS=0xCF2D9d08FfDD2BDB848ed5DA227d13D018E4F516
 UNISWAPV2_PROXY_ADDRESS=0xC077e4FBF9291715DB7A4831D70F89766C15Fe58
 
 CURVE_LITE_TWOCRYPTOSWAP_PROXY_ADDRESS=0x81f4f47aa3bBd154171C877b4d70F6C9EeCAb216
+CURVE_LITE_TWOCRYPTOSWAP_FACTORY_ADDRESS=0xdA26b343152051e6f786350C8C7A6Ea70Fc9921d
