--- a/.env.example
+++ b/.env.example
@@ -10,9 +10,25 @@ EVM_STAKEVAULT_ADDRESS=
 EVM_CCLTOKENCOLLECTION_ADDRESS=
 EVM_TESTGROUP_ADDRESS=
 
-EVM_WETH_ADDRESS=
-EVM_TKA_ADDRESS=
-EVM_TKB_ADDRESS=
+TVM_WETH_NAME=
+TVM_WETH_SYMBOL=
+TVM_WETH_DECIMALS=
+TVM_WETH_ADDRESS=
+
+TVM_TKA_NAME=
+TVM_TKA_SYMBOL=
+TVM_TKA_DECIMALS=
+TVM_TKA_ADDRESS=
+
+TVM_TKB_NAME=
+TVM_TKB_SYMBOL=
+TVM_TKB_DECIMALS=
+TVM_TKB_ADDRESS=
+
+TVM_TKC_NAME=
+TVM_TKC_SYMBOL=
+TVM_TKC_DECIMALS=
+TVM_TKC_ADDRESS=
 
 UNISWAPV2_FACTORY_ADDRESS=
 UNISWAPV2_ROUTER02_ADDRESS=
