L2-60 dapps to tilt

--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ EVM_TOKENUTILS_ADDRESS=
 EVM_SETTINGS_ADDRESS=
 EVM_CCL_ADDRESS=
 EVM_STAKEVAULT_ADDRESS=
-EVM_TESTGROUP_ADDRESS=
+EVM_GROUP_ADDRESS=
 
 TVM_WETH_ADDRESS=
 TVM_TKA_ADDRESS=
