L2-71 add btns to tilt

--- a/tilt/Dockerfile
+++ b/tilt/Dockerfile
@@ -13,8 +13,9 @@ COPY . .
 
 RUN chmod +x ./tilt/deploy.sh
 
-# create and populate new .env from .env.tilt.p1 and .env.tilt.p2
-RUN cat ./tilt/.env.tilt.p1 ./tilt/.env.tilt.p2 > .env
+# create and populate .env
+# need to use .env file instead of container env bcs ability to change it on the fly is needed w/o container rebuild
+RUN cat ./tilt/.env.tilt.init ./tilt/.env.tilt.ccl  > .env
 
 # Generate artifacts
 RUN npx hardhat compile
