[WIP] import tac-l2-ccl package, start refactor to TS

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-HARDHAT_NETWORK=
-HARDHAT_ACCOUNT=
-HARDHAT_ADDRESS=
+DEPLOYER_PRIVATE_KEY=
+TEST_SEQUENCER_PRIVATE_KEY_EVM=
+TAC_TESTNET_URL=
 
 EVM_MERKLETREEUTILS_ADDRESS=
 EVM_TOKENUTILS_ADDRESS=
