--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@ DEPLOYER_PRIVATE_KEY=
 TEST_SEQUENCER_PRIVATE_KEY_EVM=
 TAC_TESTNET_URL=
 
+EVM_WTAC_ADDRESS=
 EVM_MERKLETREEUTILS_ADDRESS=
 EVM_TOKENUTILS_ADDRESS=
 EVM_SETTINGS_ADDRESS=
