refactor repo to typescript

--- a/.env.example
+++ b/.env.example
@@ -1,25 +1,11 @@
+# DEPLOY_ENV: "localhost" - run local node, "testnet" - use tac_testnet network, "mainnet" - use tac_mainnet network
+DEPLOY_ENV=
+
 DEPLOYER_PRIVATE_KEY=
-TEST_SEQUENCER_PRIVATE_KEY_EVM=
+SEQUENCER_PRIVATE_KEY_EVM=
 TAC_TESTNET_URL=
 
-EVM_WTAC_ADDRESS=
-EVM_MERKLETREEUTILS_ADDRESS=
-EVM_TOKENUTILS_ADDRESS=
-EVM_SETTINGS_ADDRESS=
-EVM_CCL_ADDRESS=
-EVM_STAKEVAULT_ADDRESS=
-EVM_GROUP_ADDRESS=
 
-TVM_WETH_ADDRESS=
 TVM_TKA_ADDRESS=
 TVM_TKB_ADDRESS=
-TVM_TKC_ADDRESS=
 
-UNISWAPV2_FACTORY_ADDRESS=
-UNISWAPV2_ROUTER02_ADDRESS=
-UNISWAPV2_PROXY_ADDRESS=
-
-CURVE_LITE_TWOCRYPTOSWAP_PROXY_ADDRESS=
-CURVE_LITE_TWOCRYPTOSWAP_FACTORY_ADDRESS=
-CURVE_LITE_TRICRYPTOSWAP_PROXY_ADDRESS=
-CURVE_LITE_TRICRYPTOSWAP_FACTORY_ADDRESS=
