L2-93 updates for tilt

--- a/tilt/Dockerfile
+++ b/tilt/Dockerfile
@@ -14,8 +14,8 @@ COPY . .
 RUN chmod +x ./tilt/deploy.sh
 
 # create and populate .env
-# need to use .env file instead of container env bcs ability to change it on the fly is needed w/o container rebuild
-RUN cat ./tilt/.env.tilt.init ./tilt/.env.tilt.ccl  > .env
+# use .env file instead of container env for ability to change it on the fly w/o container rebuild
+COPY ./tilt/.env.tilt .env
 
 # Generate artifacts
 RUN npx hardhat compile
