L2-93 .ts in package.json

--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "main": "index.js",
   "scripts": {
     "compile": "npx hardhat compile",
-    "deploy-stton": "npx hardhat run scripts/common/deployStTON.js",
-    "deploy-tac": "npx hardhat run scripts/common/deployTAC.js",
-    "uniswap-deploy": "npx hardhat run scripts/UniswapV2/deploy.js",
-    "uniswap-addliq": "npx hardhat run scripts/UniswapV2/addLiquidity.js",
-    "uniswap-remliq": "npx hardhat run scripts/UniswapV2/removeLiquidity.js",
-    "uniswap-swapexact": "npx hardhat run scripts/UniswapV2/swapExactTokensForTokens.js",
-    "uniswap-swaptok": "npx hardhat run scripts/UniswapV2/swapTokensForExactTokens.js",
+    "deploy-stton": "npx hardhat run scripts/common/deployStTON.ts",
+    "deploy-tac": "npx hardhat run scripts/common/deployTAC.ts",
+    "uniswap-deploy": "npx hardhat run scripts/UniswapV2/deploy.ts",
+    "uniswap-addliq": "npx hardhat run scripts/UniswapV2/addLiquidity.ts",
+    "uniswap-remliq": "npx hardhat run scripts/UniswapV2/removeLiquidity.ts",
+    "uniswap-swapexact": "npx hardhat run scripts/UniswapV2/swapExactTokensForTokens.ts",
+    "uniswap-swaptok": "npx hardhat run scripts/UniswapV2/swapTokensForExactTokens.ts",
     "curve-lite-deploy": "npx hardhat run scripts/CurveLite/deployProxy.js",
     "curve-lite-deploy-pool": "npx hardhat run scripts/CurveLite/deployPoolTwocryptoswap.js",
     "curve-lite-addliq": "npx hardhat run scripts/CurveLite/addLiquidityTwocryptoswap.js",
