--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "uniswap-deploy": "npx hardhat run scripts/UniswapV2/deploy.ts",
     "uniswap-addliq": "npx hardhat run scripts/UniswapV2/addLiquidity.ts",
     "uniswap-remliq": "npx hardhat run scripts/UniswapV2/removeLiquidity.ts",
-    "uniswap-swapexact": "npx hardhat run scripts/UniswapV2/swapExactTokensForTokens.ts",
-    "uniswap-swaptok": "npx hardhat run scripts/UniswapV2/swapTokensForExactTokens.ts",
+    "uniswap-swapexact-localhost": "npx hardhat run --network localhost scripts/UniswapV2/swapExactTokensForTokens.ts",
+    "uniswap-swaptok-localhost": "npx hardhat run --network localhost scripts/UniswapV2/swapTokensForExactTokens.ts",
     "curve-lite-deploy": "npx hardhat run scripts/CurveLite/deployProxy.js",
     "curve-lite-deploy-pool": "npx hardhat run scripts/CurveLite/deployPoolTwocryptoswap.js",
     "curve-lite-addliq": "npx hardhat run scripts/CurveLite/addLiquidityTwocryptoswap.js",
