L2-93 mv keys, tka, tkb to tilt

--- a/tilt/docker-compose.yml
+++ b/tilt/docker-compose.yml
@@ -1,6 +1,9 @@
 services:
   dapps-deployer:
     container_name: dapps-deployer
+    env_file:
+      - .env.tilt.fixed
+      - .env.tilt.populated
     image: dapps-deployer-image
     build:
       dockerfile: tilt/Dockerfile
