L2-157  dapps deploy tilt success

--- a/tilt/docker-compose.yml
+++ b/tilt/docker-compose.yml
@@ -8,4 +8,6 @@ services:
     build:
       dockerfile: tilt/Dockerfile
       context: ../.
+      args:
+        - SEQUENCER_PRIVATE_KEY_EVM=${SEQUENCER_PRIVATE_KEY_EVM}
     network_mode: "host"
