--- a/tilt/Dockerfile
+++ b/tilt/Dockerfile
@@ -1,6 +1,8 @@
 # Use the same base image as the hardhat node for consistency
 FROM node:20.11.1-alpine AS dapps-deployer-image
 
+ARG SEQUENCER_PRIVATE_KEY_EVM
+
 RUN apk add nano jq
 
 WORKDIR /usr/src/app
@@ -12,6 +14,9 @@ RUN npm install
 COPY . .
 
 RUN chmod +x ./tilt/deploy.sh
+
+# Set the build argument as an environment variable, needed for compile command bcs of hardhat.config.ts
+ENV SEQUENCER_PRIVATE_KEY_EVM=${SEQUENCER_PRIVATE_KEY_EVM}
 
 # Generate artifacts
 RUN npx hardhat compile
