Update file Dockerfile

--- a/tilt/Dockerfile
+++ b/tilt/Dockerfile
@@ -1,7 +1,7 @@
 # Use the same base image as the hardhat node for consistency
 FROM node:20.11.1-alpine AS dapps-deployer-image
 
-RUN apk add nano jq
+RUN apk add nano jq dos2unix
 
 WORKDIR /usr/src/app
 
@@ -10,6 +10,8 @@ COPY package.json package-lock.json ./
 RUN npm install
 
 COPY . .
+
+RUN dos2unix ./tilt/deploy.sh
 
 RUN chmod +x ./tilt/deploy.sh
 
