--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
+  "devDependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.7",
     "@nomicfoundation/hardhat-ethers": "^3.0.8",
     "@nomicfoundation/hardhat-ignition": "^0.15.7",
@@ -42,13 +42,12 @@
     "@uniswap/lib": "^4.0.1-alpha",
     "@uniswap/v2-core": "^1.0.1",
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
-    "cli-color": "^2.0.4",
     "dotenv": "^16.4.5",
     "ethers": "^6.13.2",
     "hardhat": "^2.22.5",
     "hardhat-gas-reporter": "^1.0.10",
     "jest": "^29.7.0",
-    "tac-l2-ccl": "^0.8.27",
+    "tac-l2-ccl": "^0.8.28",
     "ts-node": "^10.9.2",
     "typechain": "^8.3.2",
     "typescript": "^5.6.3"
