--- a/package.json
+++ b/package.json
@@ -45,13 +45,15 @@
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
     "cli-color": "^2.0.4",
     "dotenv": "^16.4.5",
-    "ethers": "^6.13.2",
     "hardhat": "^2.22.5",
     "hardhat-gas-reporter": "^1.0.10",
     "jest": "^29.7.0",
     "tac-l2-ccl": "^0.8.27",
     "ts-node": "^10.9.2",
     "typechain": "^8.3.2",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "@ton/core": "^0.59.1",
+    "ethers": "^6.13.5",
+    "tac-sdk": "0.3.6-rc-4"
   }
 }
