--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "hardhat": "^2.22.18",
     "hardhat-gas-reporter": "^1.0.10",
     "jest": "^29.7.0",
-    "tac-l2-ccl": "0.9.11",
+    "tac-l2-ccl": "0.9.11-release-epoch-hotfix-2",
     "tac-sdk": "^0.3.6-rc-5",
     "ts-node": "^10.9.2",
     "typechain": "^8.3.2",
