L2-249 fixes when local regress

--- a/tilt/.env.tilt.populated
+++ b/tilt/.env.tilt.populated
@@ -1,4 +1,4 @@
-DEPLOYER_PRIVATE_KEY=to be populated
-SEQUENCER_PRIVATE_KEY_EVM=to be populated
-TVM_TKA_ADDRESS=to be populated
-TVM_TKB_ADDRESS=to be populated
+DEPLOYER_PRIVATE_KEY="to be populated"
+SEQUENCER_PRIVATE_KEY_EVM="to be populated"
+TVM_TKA_ADDRESS="to be populated"
+TVM_TKB_ADDRESS="to be populated"
