--- a/package.json
+++ b/package.json
@@ -49,8 +49,7 @@
     "hardhat": "^2.22.18",
     "hardhat-gas-reporter": "^1.0.10",
     "jest": "^29.7.0",
-    "tac-l2-ccl": "0.9.12",
-    "tac-sdk": "^0.3.6-rc-5",
+    "@tonappchain/evm-ccl": "0.9.15",
     "ts-node": "^10.9.2",
     "typechain": "^8.3.2",
     "typescript": "^5.6.3"
