upgrade all treasury proxies

--- a/.openzeppelin/unknown-2390.json
+++ b/.openzeppelin/unknown-2390.json
@@ -321,7 +321,29 @@
             }
           ]
         }
-      }
+      },
+      "allAddresses": [
+        "0x5B58E3618c73b3d8D1a313510016DaD14F93fb8b",
+        "0xa03ef822162cB599aF4F098a2F451B6e9cD6982f",
+        "0x8d6322B06B2A8E5fF6D3C102C9FE836423F03A4A",
+        "0x3d517a45CD13Ff6957355645776Be66B1C2B9330",
+        "0x196eF474C608e7f04Fb999dF21BC2FC57ee98879",
+        "0x907d52431A4bdC4a10A98dF3c98DD2eEF3A19e14",
+        "0x041D24f3591D5Eb36dea68D83EB22d8B01FD2543",
+        "0x726f1961E010Bf2417F7abb39822026f2591a4F9",
+        "0x94Be34C05DcB249793D1D23448CC1d561Bc11ec0",
+        "0xddFDE7286BB06586D12e3B81E3524AC236F1877c",
+        "0xAc624Aa5ae4777485c3c82441544D4385A3f05f0",
+        "0x85D72AC2b2e6A654c5cc15B716114E1F44999717",
+        "0xbEe07D9d6340D3f4CA746ba1B076B7dE7d88CdA4",
+        "0xaeEC4Fca6E7b5aC443C15Aab993D33ABb63B88AB",
+        "0xB86FB7164459d4eEBaF199801a8b60e8A88A1fd1",
+        "0x385a00c47026Ece7c9Ee0DFCbe7Ad75D608034A9",
+        "0x031B6e6a16b79b9A8A818b11b8E27A92414c4621",
+        "0x8cf72e0585547b014e5A093114aF6Cb2EDBaF289",
+        "0x5Db37e3Edfcd9277C55Bfdc01EcfC0A34FCA9dEf",
+        "0x39f68fA7097a0B4DdE8d7b4E5621Da0f9aB6D6D8"
+      ]
     }
   }
 }
