--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "start-node": "npx hardhat node",
     "start-node-headless": "npx hardhat node &",
     "kill-node": "lsof -ti:8545 | xargs kill -9",
-    "tests": "npx jest --runInBand --maxConcurrency=1",
+    "tests": "npx hardhat test",
     "deploy-and-tests": "npm run kill-node; npm run start-node & sleep 5 && npm run uniswap-deploy && sleep 7 && npx jest --runInBand --maxConcurrency=1"
   },
   "keywords": [],
@@ -37,7 +37,6 @@
     "@nomicfoundation/hardhat-verify": "^2.0.11",
     "@nomicfoundation/ignition-core": "^0.15.7",
     "@ton/core": "^0.59.1",
-    "@tonappchain/evm-ccl": "0.9.16",
     "@typechain/ethers-v6": "^0.5.1",
     "@typechain/hardhat": "^9.1.0",
     "@types/cli-color": "^2.0.6",
@@ -50,6 +49,7 @@
     "hardhat": "^2.22.18",
     "hardhat-gas-reporter": "^1.0.10",
     "jest": "^29.7.0",
+    "@tonappchain/evm-ccl": "0.9.16-L2-178-1.2",
     "ts-node": "^10.9.2",
     "typechain": "^8.3.2",
     "typescript": "^5.6.3"
