--- a/tilt/.env.tilt.fixed
+++ b/tilt/.env.tilt.fixed
@@ -1,3 +1,3 @@
 # DEPLOY_ENV: "localhost" - run local node, "testnet" - use tac_testnet network, "mainnet" - use tac_mainnet network
 DEPLOY_ENV=localhost
-TAC_TESTNET_URL=
+TAC_TESTNET_URL=https://newyork-inap-72-251-230-233.ankr.com/tac_tacd_testnet_full_rpc_1
